development: Changed design and improved structure

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_STACKEXCHANGE_APP_KEY=Yk9kUqszhon72tuounL65Q((
 VITE_STACKEXCHANGE_APP_TOKEN=9jfHoI*DaBOgG9S1QzhnVA))
+VITE_STACKEXCHANGE_APP_SITE=stackoverflow
 
 VITE_FIREBASE_API_KEY=AIzaSyAPY0o2i_YhzeH5z93__gJAm0ELXKKDrJY
 VITE_FIREBASE_AUTH_DOMAIN=stackexchange-gotoinc.firebaseapp.com
