--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue,.cjs .",
-    "lint:fix": "eslint --fix --ext .js,.vue,.cjs ."
+    "lint:fix": "eslint --fix --ext .js,.vue,.cjs .",
+    "format:vue": "eslint --fix --ext .vue",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "@vueuse/components": "^9.5.0",
     "@vueuse/core": "^9.5.0",
     "axios": "^1.1.3",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.6",
     "element-plus": "^2.2.22",
     "firebase": "^9.14.0",
     "html-to-formatted-text": "^2.7.0",
+    "lodash.debounce": "^4.0.8",
     "unplugin-element-plus": "^0.4.1",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.6",
+    "vue-router": "^4.2.4",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
@@ -30,8 +34,10 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^9.7.0",
+    "husky": "^8.0.3",
     "postcss": "^8.4.21",
     "prettier": "2.8.0",
     "tailwindcss": "^3.2.4",
